--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
+<!DOCTYPE html>
 <html>
- 
-<body>
-  <h1>Kendra</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
- 
+  <head>
+     <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+   <body>
+     <h1>Dosmotos Arts and Crafts</h1>
+     <h2 class="brushes">Brushes</h2>
+     <img src="photos/hacksaw.webp">
+   </img>
+      <h3>Hacksaw Brushes</h3>
+       <p>Made of the highest quality oak Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes.
+         <p class="bold">Starting at $3.00/brush.</p>
+       </p>
+     <h2 class="frames">Frames</h2>
+      <img src="photos/frames.webp">
+      <h3>Art Frames (assorted)</h3>
+       <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frmaes can be sanded and painted according to your needs. <p class="bold"> Starting at $2.00
+        </p>
+       </p>
+     <h2 class="paint">Paint</h2>
+      <img src="photos/finnish.webp">
+
+      <h3>Clean Finnish Paint</h3>
+        <p>Imported paint from Finland. Over 256 colors available in-store, varying in quanity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.
+          <p class="bold">Starting at $5.00/tube.</p>
+        <p>
+   </body>
 </html>
